<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FindMentor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/find_top"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:background="@drawable/mentor1"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        >

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@drawable/top_rounded_corners"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/find_top"
        android:scaleY="1.25"
        android:paddingHorizontal="35dp"
        >
        <TextView
            android:id="@+id/find_mentor_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/david_kimani"
            android:textSize="32sp"
            android:textStyle="bold"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAlignment="center"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp"
            />
        <TextView
            android:id="@+id/find_mentor_work"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/meditation"
            android:textSize="26sp"
            android:textStyle="bold|italic"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/find_mentor_name"
            android:layout_marginTop="1dp"
            />
        <TextView
            android:id="@+id/find_mentor_work_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/what_really_meditation_is"
            android:textSize="12sp"
            android:textStyle="normal"
            android:textColor="@color/black"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/find_mentor_work"
            android:layout_marginTop="1dp"
            />
        <LinearLayout
            android:id="@+id/find_short_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/find_mentor_work_details"
            >
            <LinearLayout
                android:background="@drawable/all_round_corners_light_greyish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/find_mentor_work_details"
                android:padding="10dp"
                android:layout_margin="5dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:src="@drawable/star"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:text="4.8"
                    android:paddingHorizontal="5dp"
                    android:paddingTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/all_round_corners_light_greyish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/find_mentor_work_details"
                android:layout_margin="5dp"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:src="@drawable/dollar_with_money_img"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:text="$23/1hr"
                    android:paddingHorizontal="5dp"
                    android:paddingTop="5dp"/>
            </LinearLayout>
            <LinearLayout
                android:background="@drawable/all_round_corners_light_greyish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="60dp"
                android:minHeight="30dp"
                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/find_mentor_work_details"
                android:layout_margin="5dp"
                android:padding="10dp"
                >
                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:src="@drawable/analog_clock"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="30dp"
                    android:background="@color/white"
                    android:text="8 hrs"
                    android:paddingHorizontal="5dp"
                    android:paddingTop="5dp"/>
            </LinearLayout>
        </LinearLayout>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/register_trial_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/all_rounded_corner_orange"
            android:text="Register a trial lesson"
            app:layout_constraintTop_toBottomOf="@+id/find_short_info"
            app:layout_constraintStart_toStartOf="parent"
            android:paddingHorizontal="20dp"
            android:layout_marginTop="10dp"
            />
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/find_reg_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/love_orange_image"
            android:background="@drawable/all_round_grey_strole"
            app:layout_constraintStart_toEndOf="@+id/register_trial_btn"
            app:layout_constraintTop_toBottomOf="@+id/find_short_info"
            android:layout_margin="10dp"
            android:padding="15dp"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="20dp"
                android:src="@drawable/love_orange_image"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
        <TextView
            android:id="@+id/course_details_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/course_details"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@+id/find_reg_btn"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_webinar_starts_with_medit"
            app:layout_constraintTop_toBottomOf="@+id/course_details_btn"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>